Opened 10 years ago
Closed 10 years ago
#4075 closed bug (fixed)
Panic in r31444 when mounting a NTFS volume
Reported by: | meianoite | Owned by: | bga |
---|---|---|---|
Priority: | critical | Milestone: | R1/alpha1 |
Component: | File Systems/NTFS | Version: | R1/pre-alpha1 |
Keywords: | Cc: | Jens.Arm@… | |
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | x86 |
Description
System is gcc2 hrev31444 with rebuilt toolchain at the same revision. Probably related to the recent wchar_t changes, since NTFS uses Unicode for names. Reproducible every time.
I'm considering this critical despite the NTFS add-on being optional because I can't see any Windows multi-booting user not enabling it.
Steps to reproduce: enable gpl addons (and maybe 3rd party, I don't know where the ntfs-3g add-on is located). Boot Haiku, attempt to mount a NTFS volume, as read-only even. First symptom appears before the mounting per se: the volume names aren't shown anymore, with Tracker showing a placeholder "NTFS Volume" label instead. Second symptom is that, well, it KDLs, with the following message:
PANIC: vm_page_fault: unhandled page fault in kernel space at 0x0, ip 0x800ea66b Welcome to Kernel Debugging Land... Thread 160 "TrashWatcher" running on CPU 3
Screenshots of stack trace are attached, sorry for the CRT noise.
Attachments (6)
Change History (11)
by , 10 years ago
Attachment: | IMG_0061.jpg added |
---|
by , 10 years ago
Attachment: | IMG_0062.jpg added |
---|
by , 10 years ago
Attachment: | IMG_0063.jpg added |
---|
by , 10 years ago
Attachment: | IMG_0064.jpg added |
---|
by , 10 years ago
Attachment: | IMG_0065.jpg added |
---|
by , 10 years ago
Attachment: | IMG_0066.jpg added |
---|
comment:1 by , 10 years ago
Cc: | added |
---|
comment:2 by , 10 years ago
comment:3 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
It seems ntfslib expects wide chars to be 16 bits. Looking into it.
comment:4 by , 10 years ago
That actually makes sense, afaik NTFS encodes entry names using UTF-16 on disk.
I can confirm this. it seems the entire libntfs is broken as I managed to change the code to make the partitions mountable but, after that, I get no real data from the partitions (not even directory listings).