- Use ntfschar instead of wchar_t where applicable. libntfs assumed that the   size of wchar was 16 bits, which was not true anymore after recent changes. - Considering the changes were inside libntfs, which is 3rd party code, I am   not sure this is the correct way to apply this fix (if you have a better   idea, let me know. - This fixes bug #4075.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31589 a95241bf-73f2-0310-859d-f6bbb57e9c96